--- a/src/main/resources/Agenda.fxml
+++ b/src/main/resources/Agenda.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import jfxtras.scene.control.CalendarPicker?>
+<?import jfxtras.scene.control.agenda.Agenda?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="AgendaController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="646.0" prefWidth="1071.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AgendaController">
+   <children>
+      <Agenda fx:id="agenda" layoutX="-62.0" layoutY="118.0" prefHeight="439.0" prefWidth="764.0" scaleX="0.8" scaleY="0.8" />
+      <CalendarPicker layoutX="703.0" layoutY="14.0" />
+   </children>
 </AnchorPane>
