--- a/src/main/resources/Agenda.fxml
+++ b/src/main/resources/Agenda.fxml
@@ -1,25 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import jfxtras.scene.control.CalendarPicker?>
 <?import jfxtras.scene.control.LocalTimeTextField?>
 <?import jfxtras.scene.control.agenda.Agenda?>
 
-<AnchorPane prefHeight="646.0" prefWidth="1071.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AgendaController">
+
+<GridPane gridLinesVisible="true" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AgendaController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="60.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="800.0" minWidth="10.0" percentWidth="40.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+   </rowConstraints>
    <children>
-      <Agenda fx:id="agenda" layoutX="-50.0" layoutY="119.0" prefHeight="553.0" prefWidth="702.0" scaleX="0.8" scaleY="0.8" />
-      <CalendarPicker fx:id="calander" layoutX="703.0" layoutY="14.0" />
-      <LocalTimeTextField fx:id="startTime" layoutX="801.0" layoutY="331.0" prefHeight="31.0" prefWidth="208.0" promptText="Start time" />
-      <Label layoutX="637.0" layoutY="331.0" prefHeight="31.0" prefWidth="103.0" text="Start time" />
-      <Label layoutX="637.0" layoutY="402.0" prefHeight="31.0" prefWidth="103.0" text="End time" />
-      <LocalTimeTextField fx:id="endTime" layoutX="801.0" layoutY="402.0" prefHeight="31.0" prefWidth="208.0" promptText="End Time" />
-      <TextArea fx:id="desctiption" layoutX="805.0" layoutY="447.0" prefHeight="139.0" prefWidth="186.0" />
-      <Label layoutX="637.0" layoutY="475.0" prefHeight="31.0" prefWidth="103.0" text="Description" />
-      <Button layoutX="665.0" layoutY="617.0" mnemonicParsing="false" onAction="#addAppointment" styleClass="add-button" text="Add" />
-      <Button layoutX="771.0" layoutY="617.0" mnemonicParsing="false" onAction="#updateAppointment" styleClass="update-button" text="Update" />
-      <Button layoutX="898.0" layoutY="617.0" mnemonicParsing="false" onAction="#deleteAppointment" styleClass="delete-button" text="Delete" />
+      <Agenda fx:id="agenda" maxHeight="1.7976931348623157E308" prefWidth="645.0" scaleX="0.8" scaleY="0.8" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS" />
+      <CalendarPicker fx:id="calander" maxHeight="500.0" maxWidth="500.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </GridPane.margin>
+      </CalendarPicker>
+      <GridPane gridLinesVisible="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+         <columnConstraints>
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <LocalTimeTextField fx:id="startTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Start time" GridPane.columnIndex="1" />
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Start time" />
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="End time" GridPane.rowIndex="1" />
+            <LocalTimeTextField fx:id="endTime" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="End Time" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextArea fx:id="desctiption" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="186.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="103.0" text="Description" GridPane.rowIndex="2" />
+            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2" GridPane.rowIndex="3">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#addAppointment" styleClass="add-button" text="Add">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#updateAppointment" styleClass="update-button" text="Update">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteAppointment" styleClass="delete-button" text="Delete">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+         <GridPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </GridPane.margin>
+      </GridPane>
    </children>
-</AnchorPane>
+</GridPane>
